# airline-tickets

./: Cargo.toml  Makefile  README.md
src/: handlers.rs  main.rs
src/boundaries/: http_out.rs  mod.rs  redis.rs  web.rs
src/core/: error.rs
src/resolvers/: graphql.rs  internal.rs  mod.rs
src/schema/: errors.rs  mod.rs
src/schema/model/: web.rs
src/schemas/: mod.rs
src/test/: ping.rs
